# dcmsort

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dcmsort.py  pyproject.toml  setup.cfg  test_dcmsort.py  test_utils.py  tox.ini  utils.py
src/dcmsort/: dcmsort.py
test_data/: I12  I17  I2  I3  I8
test_data/dir1/: I0
tests/: test_dcmsort.py
tests/test_data/: I14  I18  I7
tests/test_data/dir1/: DICOMDIR
