[project]
name = "dcmsort"
version = "1.1.6"
description = "Sort DICOM files into patient / study / series hierarchy"
readme = "README.md"
authors = [
    { name = "Stephen Wastling", email = "stephen.wastling@nhs.net" }
]
requires-python = ">=3.13"
dependencies = [
    "pydicom>=3.0.1",
]

[project.scripts]
dcmsort = "dcmsort.dcmsort:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "pytest>=8.3.3",
    "pytest-console-scripts>=1.4.1",
    "ruff>=0.8.0",
]
