[metadata]
name = dcmsort
description = Sort DICOM files into studies and series
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SWastling/dcmsort
author = Stephen Wastling
author_email = stephen.wastling@nhs.net
license = MIT
classifiers = 
	Development Status :: 5 - Alpha
	Environment :: Console
	License :: OSI Approved :: MIT License
	Operating System :: POSIX
	Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics

[options]
py_modules = 
	src
python_requires = >=3.7
package_dir = 
	= src
packages = find:
install_requires =
    pydicom

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts = 
	dcmsort = dcmsort.dcmsort:main

[egg_info]
tag_build = 
tag_date = 0

